syntax="proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Shared.Protos";
package WelcomePackage;


message WelcomeRequest {
  string  firstName=1;
  string lastName=2;
}

message WelcomeResponse {
  string  message=1;
}


message NotificationsRequest {
  string message = 1;
  string to = 2;
  string from = 3;
}

message NotificationsResponse{  
  string message = 1;
  google.protobuf.Timestamp receivedAt = 3;
}

service  WelcomeService{
  rpc Welcome(WelcomeRequest) returns (WelcomeResponse);
  rpc SendNotification(stream NotificationsRequest) returns (stream NotificationsResponse); 
}

